--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,14 +4,20 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.INTERNET" /> 
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />	
+	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
+   
+    
     <uses-sdk android:minSdkVersion="4" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:label="@string/app_name"
-            android:name=".AQSimpleFacebookActivity" >
+    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name="MainApplication" >
+        <activity android:label="@string/app_name" android:name=".FeedActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
