--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # built application files
-*.apk
+#*.apk
 *.ap_
 
 # files for the dex VM
@@ -7,11 +7,13 @@
 
 # Java class files
 *.class
-*.jar
+#*.jar
 
 # generated files
 bin/
 gen/
+.svn/
+beta/
 
 # Local configuration file (sdk path, etc)
 local.properties
