--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,12 +17,14 @@
     <uses-sdk android:minSdkVersion="4" />
 
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name="MainApplication" >
-        <activity android:label="@string/app_name" android:name=".FeedActivity" >
+        <activity android:label="@string/app_name" android:name=".FeedActivity" android:theme="@style/Theme.SimpleFacebook">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:label="@string/app_name" android:name=".ImageActivity" android:theme="@style/Theme.SimpleFacebook">
         </activity>
     </application>
 
