--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.androidquery.facebook"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="com.androidquery.simplefeed"
+    android:versionCode="58"
+    android:versionName="2.11.58" >
 
     <uses-permission android:name="android.permission.INTERNET" /> 
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -10,21 +10,60 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	
+	
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	
+	
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />	
 	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
    
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15" android:maxSdkVersion="15"/>
     
-    <uses-sdk android:minSdkVersion="4" />
-
-    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name="MainApplication" >
-        <activity android:label="@string/app_name" android:name=".FeedActivity" android:theme="@style/Theme.SimpleFacebook">
+	
+    <application android:icon="@drawable/launcher" android:label="@string/app_name" android:name="com.androidquery.simplefeed.MainApplication" android:hardwareAccelerated="true">
+     
+        <activity android:label="@string/app_name" android:name=".activity.LaunchActivity" android:configChanges="locale" android:theme="@style/Theme.SimpleFacebook">
+        
+        
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:label="@string/app_name" android:name=".ImageActivity" android:theme="@style/Theme.SimpleFacebook">
+        
+        <activity android:label="@string/app_name" android:name=".activity.FeedActivity" android:configChanges="locale" android:theme="@style/Theme.SimpleFacebook">
+        </activity>
+           
+        <activity android:label="@string/app_name" android:name=".activity.ImageActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"  android:configChanges="orientation|keyboardHidden" android:hardwareAccelerated="false">
+        </activity>
+       
+        <activity android:label="@string/app_name" android:name=".activity.AllDataActivity" android:theme="@style/Theme.SimpleFacebook">
+        </activity>
+        
+        <activity android:label="@string/app_name" android:name=".activity.FriendsActivity" android:theme="@style/Theme.SimpleFacebook" android:windowSoftInputMode="stateUnchanged" android:configChanges="orientation|keyboardHidden">
+        </activity>
+        
+        <activity android:label="@string/app_name" android:name=".activity.PlaceActivity" android:theme="@style/Theme.SimpleFacebook" android:windowSoftInputMode="stateUnchanged">
+        </activity>
+        
+        <activity android:label="@string/app_name" android:name=".activity.CommentActivity" android:theme="@style/Theme.SimpleFacebook" android:windowSoftInputMode="stateUnchanged">
+        </activity>
+        
+        <activity android:label="@string/app_name" android:name=".activity.NotificationActivity" android:theme="@style/Theme.SimpleFacebook" android:windowSoftInputMode="stateUnchanged">
+        	
+        </activity>    
+            
+        <activity android:label="@string/app_name" android:name=".activity.SettingsActivity">
+        </activity>
+        <activity android:label="@string/app_name" android:name=".activity.PostActivity" android:theme="@style/Theme.SimpleFacebook" android:windowSoftInputMode="stateVisible|adjustResize">
+            
+        </activity>
+            
+            
+        <activity android:label="@string/app_name" android:name="com.androidquery.simplefeed.activity.AdhocActivity2" android:theme="@style/Theme.SimpleFacebook">
+            
         </activity>
     </application>
 
