--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.androidquery.simplefeed"
-    android:versionCode="58"
-    android:versionName="2.11.58" >
+    android:versionCode="59"
+    android:versionName="2.11.59" >
 
     <uses-permission android:name="android.permission.INTERNET" /> 
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -18,7 +18,7 @@
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />	
 	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
    
-	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15" android:maxSdkVersion="15"/>
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="16"/>
     
 	
     <application android:icon="@drawable/launcher" android:label="@string/app_name" android:name="com.androidquery.simplefeed.MainApplication" android:hardwareAccelerated="true">
